# Tuba

./: .buildconfig  .editorconfig  .gitattributes  .gitignore  .gitmodules  .valalintignore  .woodpecker.yml  Brewfile  CODE_OF_CONDUCT.md  Makefile  README.md  Tuba.doap  branding.conf  com.github.bleakgrey.tootle.json  dev.geopjr.Tooth.Devel.json  dev.geopjr.Tooth.json  dev.geopjr.tooth.Devel.json  dev.geopjr.tooth.json  flake.nix  install.sh  meson.build  meson_options.txt  reproducer.desktop  reproducer.json  reproducer.vala  runtime.Brewfile  snapcraft.yaml  uninstall.sh  unsaved file 1  vala-lint.conf
data/: Application.css  app.css  com.github.bleakgrey.tootle.appdata.xml.in  com.github.bleakgrey.tootle.desktop.in  com.github.bleakgrey.tootle.gresource.xml  com.github.bleakgrey.tootle.gschema.xml  dark.css  dev.geopjr.Tooth.appdata.xml.in  dev.geopjr.Tooth.desktop.in  dev.geopjr.Tooth.gschema.xml  dev.geopjr.Tuba.1.in  dev.geopjr.Tuba.UnifiedPush.service.in  dev.geopjr.Tuba.appdata.xml.in  dev.geopjr.Tuba.desktop.in  dev.geopjr.Tuba.gschema.xml  dev.geopjr.Tuba.metainfo.xml.in  dev.geopjr.Tuba.service.in  dev.geopjr.tooth.appdata.xml.in  dev.geopjr.tooth.desktop.in  dev.geopjr.tooth.gschema.xml  gresource.xml  gresource.xml.in  light.css  meson.build  style-dark.css  style-hc.css  style.css
data/gtk/: help-overlay.ui  shortcuts-dialog.ui
data/gtk/dropdown/: content_type.ui  content_type_title.ui  expiration.ui  expiration_title.ui  full.ui  icon.ui  language.ui  language_title.ui  notification_filter.ui  notification_filter_title.ui
data/icons/: LICENSE
data/langs/: fedi-basic.lang  fedi-dark.xml  fedi-html.lang  fedi-markdown.lang  fedi.xml  fedi.xml.in
data/ui/: menus.ui
data/ui/dialogs/: admin_dashboard.ui  advanced_search.ui  compose.ui  composer.ui  filter_edit.ui  list_edit.ui  list_editor.ui  main.ui  new_account.ui  new_composer.ui  notification_settings.ui  preferences.ui  profile_edit.ui  schedule.ui
data/ui/views/: base.ui  media_viewer.ui  new_account.ui  profile_header.ui
data/ui/widgets/: accounts_button.ui  accounts_button_item.ui  adaptive_button.ui  announcement.ui  attachment_slot.ui  audiocontrols.ui  bookwyrmpage.ui  compose_attachment.ui  list_editor_item.ui  list_item.ui  preview_card.ui  preview_card_explore.ui  preview_card_internal.ui  profile.ui  profile_field_row.ui  status.ui  timeline_filter.ui  timeline_footer.ui  timeline_menu.ui  votebox.ui
src/API/: Account.vala  AccountField.vala  Akkoma.vala  Announcement.vala  AnnualReports.vala  Attachment.vala  BookWyrm.vala  Collection.vala  Conversation.vala  Emoji.vala  EmojiReaction.vala  Entity.vala  FamiliarFollowers.vala  FeaturedTag.vala  Funkwhale.vala  GroupedNotificationsResults.vala  Instance.vala  InstanceV2.vala  List.vala  Mention.vala  Misskey.vala  Nodeinfo.vala  Notification.vala  NotificationFilter.vala  NotificationType.vala  PeerTube.vala  Pleroma.vala  Poll.vala  PollOption.vala  Push.vala  Quote.vala  Relationship.vala  ScheduledStatus.vala  SearchResult.vala  SearchResults.vala  Status.vala  StatusVisibility.vala  Suggestion.vala  Tag.vala  TagHistory.vala  (+3 more)
src/API/Account/: Role.vala  Source.vala  meson.build
src/API/Admin/: Account.vala  Dimension.vala  DomainAllow.vala  DomainBlock.vala  EmailDomainBlock.vala  IPBlock.vala  Report.vala  meson.build
src/API/Akkoma/: Source.vala  Translation.vala  meson.build
src/API/Attachment/: Meta.vala  meson.build
src/API/BookWyrm/: Author.vala  Cover.vala  meson.build
src/API/Filters/: Filter.vala  FilterKeyword.vala  FilterResult.vala  FilterStatus.vala  meson.build
src/API/Funkwhale/: Track.vala  meson.build
src/Dialogs/: About.vala  Admin.vala  AnnualReport.vala  Collection.vala  Collections.vala  Compose.vala  DevConsole.vala  DialogToot.vala  FilterEdit.vala  HashtagList.vala  ISavedWindow.vala  ListEdit.vala  ListEditor.vala  MainWindow.vala  NewAccount.vala  NewAccountDialog.vala  NotificationSettings.vala  Offline.vala  PostDialog.vala  Preferences.vala  ProfileEdit.vala  Report.vala  Saveable.vala  SettingsDialog.vala  WatchlistDialog.vala  WatchlistEditor.vala  meson.build
src/Utils/: Blurhash.vala  Celebrate.vala  Counting.vala  DateTime.vala  Exif.vala  Feedback.vala  Host.vala  Html.vala  Locale.vala  ShareHandler.vala  TagExtractor.vala  Tracking.vala  Units.vala  WebApHandler.vala  meson.build
src/Views/: Abstract.vala  AbstractView.vala  AccountView.vala  Accounts.vala  AddAccountView.vala  Announcements.vala  Base.vala  Bookmarks.vala  Browser.vala  Bubble.vala  Collections.vala  ContentBase.vala  ContentBaseListView.vala  Conversations.vala  Direct.vala  DirectView.vala  DraftStatuses.vala  Drive.vala  EditHistory.vala  ExpandedStatus.vala  Explore.vala  Favorites.vala  FavoritesView.vala  Federated.vala  FederatedView.vala  FollowRequests.vala  Followers.vala  FollowersView.vala  Following.vala  FollowingView.vala  Hashtag.vala  HashtagView.vala  Hashtags.vala  Home.vala  HomeView.vala  HomeView.vala~  Link.vala  List.vala  Lists.vala  Local.vala  (+21 more)
src/Widgets/: Account.vala  AccountRow.vala  AccountSuggestions.vala  AccountWidget.vala  AccountsButton.vala  AccountsButton.vala~  AdaptiveButton.vala  AlignedLabel.vala  Announcement.vala  AttachmentBox.vala  AttachmentGrid.vala  AttachmentWidget.vala  Avatar.vala  Background.vala  BookWyrmPage.vala  Collection.vala  Conversation.vala  CustomEmojiChooser.vala  Emoji.vala  EmojiLabel.vala  EmojiLabelTemp.vala  EmojiReactionAccounts.vala  FadeBin.vala  FocusPicker.vala  FocusPicture.vala  GroupedNotification.vala  HashtagBar.vala  HeaderBar.vala  ImageAttachment.vala  ImageToggleButton.vala  LabelWithWidgets.vala  ListBoxRowWrapper.vala  LockableToggleButton.vala  MarkupPolicy.vala  MarkupView.vala  Notification.vala  NotificationRequest.vala  NotificationWidget.vala  PreviewCard.vala  PreviewCardExplore.vala  (+26 more)
tests/: Blurhash.test.vala  Celebrate.test.vala  Counting.test.vala  DateTime.test.vala  Html.test.vala  ShareHandler.test.vala  TagExtractor.test.vala  Tracking.test.vala  Units.test.vala  WebApHandler.test.vala  meson.build
(+303 files in other folders)
