sources += files(
    'Account.vala',
    'AccountField.vala',
    'Announcement.vala',
    'AnnualReports.vala',
    # 'Akkoma.vala', # uneeded for now
    'Attachment.vala',
    'BookWyrm.vala',
    'Conversation.vala',
    'Emoji.vala',
    'EmojiReaction.vala',
    'Entity.vala',
    'FamiliarFollowers.vala',
    'Funkwhale.vala',
    'Instance.vala',
    'InstanceV2.vala',
    'List.vala',
    'Mention.vala',
    'Notification.vala',
    'NotificationFilter.vala',
    'PeerTube.vala',
    'Poll.vala',
    'PollOption.vala',
    'Relationship.vala',
    'ScheduledStatus.vala',
    'SearchResult.vala',
    'SearchResults.vala',
    'Status.vala',
    'Suggestion.vala',
    'Tag.vala',
    'TagHistory.vala',
    'Translation.vala',
)

subdir('Admin')
subdir('Account')
subdir('Akkoma')
subdir('BookWyrm')
subdir('Filters')
subdir('Funkwhale')
subdir('Instance')
subdir('PeerTube')
subdir('Pleroma')
subdir('Status')
