sources += files(
    'Account.vala',
    'AccountField.vala',
    'Announcement.vala',
    'AnnualReports.vala',
    # 'Akkoma.vala', # uneeded for now
    'Attachment.vala',
    'BookWyrm.vala',
    'Conversation.vala',
    'Emoji.vala',
    'EmojiReaction.vala',
    'Entity.vala',
    'FeaturedTag.vala',
    'FamiliarFollowers.vala',
    'Funkwhale.vala',
    'GroupedNotificationsResults.vala',
    'Instance.vala',
    'InstanceV2.vala',
    'List.vala',
    'Mention.vala',
    'Notification.vala',
    'NotificationFilter.vala',
    'Poll.vala',
    'PollOption.vala',
    'Quote.vala',
    'Relationship.vala',
    'ScheduledStatus.vala',
    'SearchResult.vala',
    'SearchResults.vala',
    'Status.vala',
    'Suggestion.vala',
    'Tag.vala',
    'TagHistory.vala',
    'Translation.vala',
)

subdir('Admin')
subdir('Account')
subdir('Akkoma')
subdir('BookWyrm')
subdir('Filters')
subdir('Funkwhale')
subdir('Iceshrimp')
subdir('Instance')
subdir('PeerTube')
subdir('Pleroma')
subdir('Status')
