sources += files(
    'Admin.vala',
    'AnnualReport.vala',
    'FilterEdit.vala',
    'ListEdit.vala',
    'MainWindow.vala',
    'NewAccount.vala',
    'NotificationSettings.vala',
    'Preferences.vala',
    'ProfileEdit.vala',
    'Report.vala',
    'Saveable.vala',
)

if devmode
  sources += files ('DevConsole.vala')
endif

subdir('Admin')
subdir('Composer')
