sources += files(
    'Blurhash.vala',
    'Celebrate.vala',
    'Counting.vala',
    'DateTime.vala',
    'Host.vala',
    'Html.vala',
    'Locale.vala',
    'ShareHandler.vala',
    'TagExtractor.vala',
    'Tracking.vala',
    'Units.vala',
    'WebApHandler.vala',
)

if gexiv2
  sources += files ('Exif.vala')
endif
