sources += files(
    'Accounts.vala',
    'Announcements.vala',
    'Base.vala',
    'Bookmarks.vala',
    'ContentBase.vala',
    'Conversations.vala',
    'Explore.vala',
    'EditHistory.vala',
    'Favorites.vala',
    'Federated.vala',
    'FollowRequests.vala',
    'Hashtag.vala',
    'Hashtags.vala',
    'Home.vala',
    'List.vala',
    'Lists.vala',
    'Local.vala',
    'Main.vala',
    'MediaViewer.vala',
    'Notifications.vala',
    'Profile.vala',
    'Search.vala',
    'Sidebar.vala',
    'StatusStats.vala',
    'TabbedBase.vala',
    'Thread.vala',
    'Timeline.vala',
)
