sources += files(
    'Accounts.vala',
    'Announcements.vala',
    'Base.vala',
    'Bookmarks.vala',
    'ContentBase.vala',
    'Conversations.vala',
    'Explore.vala',
    'EditHistory.vala',
    'Favorites.vala',
    'Federated.vala',
    'FollowRequests.vala',
    'Hashtag.vala',
    'Hashtags.vala',
    'Home.vala',
    'Link.vala',
    'List.vala',
    'Lists.vala',
    'Local.vala',
    'Main.vala',
    'MediaViewer.vala',
    'MutesBlocks.vala',
    'NotificationRequests.vala',
    'NotificationRequestsList.vala',
    'Notifications.vala',
    'Profile.vala',
    'ScheduledStatuses.vala',
    'Search.vala',
    'Sidebar.vala',
    'StatusStats.vala',
    'TabbedBase.vala',
    'Thread.vala',
    'Timeline.vala',
)

subdir('Admin')
