sources += files(
    'Avatar.vala',
    'Background.vala',
    'BookWyrmPage.vala',
    'Conversation.vala',
    'CustomEmojiChooser.vala',
    'Emoji.vala',
    'EmojiLabel.vala',
    'LabelWithWidgets.vala',
    'LockableToggleButton.vala',
    'MarkupView.vala',
    'Notification.vala',
    'PreviewCard.vala',
    'RelationshipButton.vala',
    'RichLabel.vala',
    'Status.vala',
    'StatusActionButton.vala',
    'VoteBox.vala',
    'VoteCheckButton.vala',
    'Widgetizable.vala',
)

subdir('Attachment')
