sources += files(
    'Account.vala',
    'Announcement.vala',
    'Avatar.vala',
    'Background.vala',
    'BookWyrmPage.vala',
    'Conversation.vala',
    'CustomEmojiChooser.vala',
    'Emoji.vala',
    'EmojiLabel.vala',
    'LabelWithWidgets.vala',
    'ListBoxRowWrapper.vala',
    'MarkupView.vala',
    'Notification.vala',
    'PreviewCard.vala',
    'ProfileCover.vala',
    'RelationshipButton.vala',
    'RichLabel.vala',
    'ScaleRevealer.vala',
    'Status.vala',
    'StatusActionButton.vala',
    'VoteBox.vala',
    'VoteCheckButton.vala',
    'Widgetizable.vala',
)

subdir('Attachment')
subdir('Status')
