sources += files(
    'Account.vala',
    'AccountSuggestions.vala',
    'Announcement.vala',
    'Avatar.vala',
    'Background.vala',
    'BookWyrmPage.vala',
    'Conversation.vala',
    'CustomEmojiChooser.vala',
    'Emoji.vala',
    'EmojiLabel.vala',
    'EmojiReactionAccounts.vala',
    'FocusPicker.vala',
    'FocusPicture.vala',
    'HashtagBar.vala',
    'LabelWithWidgets.vala',
    'ListBoxRowWrapper.vala',
    'MarkupView.vala',
    'Notification.vala',
    'NotificationRequest.vala',
    'PreviewCard.vala',
    'PreviewCardInternal.vala',
    'PreviewCardExplore.vala',
    'ProfileCover.vala',
    'ProfileFilterGroup.vala',
    'ReactButton.vala',
    'RelationshipButton.vala',
    'RichLabel.vala',
    'ScaleRevealer.vala',
    'ScheduledStatus.vala',
    'Status.vala',
    'StatusActionButton.vala',
    'VoteBox.vala',
    'VoteCheckButton.vala',
    'Widgetizable.vala',
)

subdir('Admin')
subdir('Attachment')

if gstreamer
  subdir('AudioPlayer')
endif

subdir('Status')
