sources += files(
    'AttachmentsPage.vala',
    'AttachmentsPageAttachment.vala',
    'Dialog.vala',
    'EditorPage.vala',
    'NewDialog.vala',
    'NewDialogAttachable.vala',
    'NewDialogAttachment.vala',
    'NewDialogAttachmentsBin.vala',
    'NewDialogDropOverlay.vala',
    'NewDialogEditor.vala',
    'NewDialogPolls.vala',
    'Page.vala',
    'PollPage.vala',
    'Schedule.vala',
)

subdir('Completion')
